--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-react": "^6.6.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
